--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -11,5 +11,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://rsshub.app/picuki/profile/gamejutsu_vaibhav"
+          feed_list: "https://rss.app/feeds/VlmS8HXlfNsWupa9.xml"
           title_max_length: 25
